--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   persistent_bottom_nav_bar: ^4.0.2
-  splashscreen: ^1.3.5
+  # flutter_native_splash: any
+  # flutter_svg: ^0.17.4
+
 
 dev_dependencies:
   flutter_test:
@@ -46,7 +48,13 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^1.0.0   
+  flutter_native_splash: ^2.0.1+1
+  
+flutter_native_splash:
+  color: "#1f1e1e"
+  image: assets/images/splash/splash.png
+  android: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -62,6 +70,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/navbar/
+    - assets/images/splash/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
