--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "cloudagro",
-    "short_name": "cloudagro",
+    "name": "agro",
+    "short_name": "agro",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
